update to Flask and Rest

--- a/Abschlussproject-CCDE&UC/Flask und Rest/templates/startseite.html
+++ b/Abschlussproject-CCDE&UC/Flask und Rest/templates/startseite.html
@@ -7,4 +7,4 @@
 
 <a class="btn btn-primary" href="/game" role="button">Spiel</a>
 
-<a class="btn btn-primary" href="/songs" role="button">Alle Fragen</a>
+<a class="btn btn-primary" href="/songs" role="button">Alle Songs</a>
