--- a/Abschlussproject-CCDE&UC/Flask und Rest/templates/songs.html
+++ b/Abschlussproject-CCDE&UC/Flask und Rest/templates/songs.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
 
@@ -9,7 +10,10 @@
             <th>ID</th>
             <th>Name</th>
             <th>Path</th>
-            <th>Action</th>
+            <th>Play</th>
+            <th>Stop</th>
+            <th>Pause</th>
+            <th>Unpause</th>
         </tr>
     </thead>
     <tbody>
@@ -21,9 +25,11 @@
             <td><a class="btn btn-primary" href="/play/{{s.name}}" role="button">Play</a>
                 <!--<input type="submit" name="submit" value="{{s.name}}">-->
             </td>
-            <td><a class="btn btn-primary" href="/stop/{{s.name}}" role="button">Stop</a>
+            <td><a class="btn btn-primary" href="/stop" role="button">Stop</a>
                 <!--<input type="submit" name="submit" value="{{s.name}}">-->
             </td>
+            <td><a class="btn btn-primary" href="/pause" role="button">Pause</a></td>
+            <td><a class="btn btn-primary" href="/unpause" role="button">Unpause</a></td>
         </tr>
         {% endfor %}
     </tbody>
@@ -32,7 +38,10 @@
             <th>ID</th>
             <th>Name</th>
             <th>Path</th>
-            <th>Action</th>
+            <th>Play</th>
+            <th>Stop</th>
+            <th>Pause</th>
+            <th>Unpause</th>
         </tr>
     </tfoot>
 </table>
