some changes to flask

--- a/Abschlussproject-CCDE&UC/Flask und Rest/templates/songs.html
+++ b/Abschlussproject-CCDE&UC/Flask und Rest/templates/songs.html
@@ -1,55 +1,109 @@
-<link rel="stylesheet" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<link
+  rel="stylesheet"
+  href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css"
+/>
+<link
+  rel="stylesheet"
+  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+/>
 <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
+<script
+  src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+  integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+  crossorigin="anonymous"
+></script>
+<script
+  src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+  integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+  crossorigin="anonymous"
+></script>
 
-
-<table id="example" class="display" style="width:100%">
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Path</th>
-            <th>Play</th>
-            <th>Stop</th>
-            <th>Pause</th>
-            <th>Unpause</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for s in songs %}
-        <tr>
-            <td>{{s.id}}</td>
-            <td>{{s.name}}</td>
-            <td>{{s.path}}</td>
-            <td><a class="btn btn-primary" href="/play/{{s.name}}" role="button">Play</a>
-                <!--<input type="submit" name="submit" value="{{s.name}}">-->
-            </td>
-            <td><a class="btn btn-primary" href="/stop" role="button">Stop</a>
-                <!--<input type="submit" name="submit" value="{{s.name}}">-->
-            </td>
-            <td><a class="btn btn-primary" href="/pause" role="button">Pause</a></td>
-            <td><a class="btn btn-primary" href="/unpause" role="button">Unpause</a></td>
-        </tr>
-        {% endfor %}
-    </tbody>
-    <tfoot>
-        <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Path</th>
-            <th>Play</th>
-            <th>Stop</th>
-            <th>Pause</th>
-            <th>Unpause</th>
-        </tr>
-    </tfoot>
+<table id="example" class="display" style="width: 100%">
+  <thead>
+    <tr>
+      <th>ID</th>
+      <th>Name</th>
+      <th>Path</th>
+      <th>Play</th>
+      <th>Stop</th>
+      <th>Pause</th>
+      <th>Unpause</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for s in songs %}
+    <tr>
+      <td>{{s.id}}</td>
+      <td>{{s.name}}</td>
+      <td>{{s.path}}</td>
+      <td>
+        <a class="btn btn-primary" href="/play/{{s.name}}" role="button"
+          >Play</a
+        >
+        <!--<input type="submit" name="submit" value="{{s.name}}">-->
+      </td>
+      <td>
+        <a class="btn btn-primary" href="/stop" role="button">Stop</a>
+        <!--<input type="submit" name="submit" value="{{s.name}}">-->
+      </td>
+      <td><a class="btn btn-primary" href="/pause" role="button">Pause</a></td>
+      <td>
+        <a class="btn btn-primary" href="/unpause" role="button">Unpause</a>
+      </td>
+    </tr>
+    {% endfor %}
+  </tbody>
+  <tfoot>
+    <tr>
+      <th>ID</th>
+      <th>Name</th>
+      <th>Path</th>
+      <th>Play</th>
+      <th>Stop</th>
+      <th>Pause</th>
+      <th>Unpause</th>
+    </tr>
+  </tfoot>
 </table>
+<form action="/volume" method="post" enctype="multi/form-data" id="form">
+<label for="volume">Volume: </label>
+<input id="volume" type="text">
+<a href = "javascript:;" onclick = "this.href='/volume/' + document.getElementById('volume').value">Send</a>
+</form>
 
 <script>
-    $(document).ready(function() {
-        $('#example').DataTable();
-    });
+
+  $(document).ready(function() {
+      $('#example').DataTable();
+  });
+
+  /*
+ val slide = document.getElementById('slide'),
+  sliderDiv = document.getElementById("sliderDiv");
+
+  slide.onchange = function(){
+      sliderDiv.innerHTML = this.value;
+      $.post({
+          url: '/volume',
+          data: $('form').serialize(),
+          success: function(response){
+              alert(response);
+              alert(response.volume);
+              alert(JSON.parse(response).volume);
+              console.log(response);
+          },
+          error: function(error){
+              alert(response);
+              console.log(error);
+          }
+      });
+  } */
+
+
+  $(document).ready(function() {
+      $('#example').DataTable();
+  });
 </script>
 
 <a class="btn btn-primary" href="/" role="button">Back to main menu </a>
